<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bt="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.basistheory.android.example.text_element.TextElementFragment">

    <ScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <com.basistheory.android.view.CardNumberElement
                android:id="@+id/cardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text"
                android:padding="5dp"
                bt:hint="Card Number"
                bt:removeDefaultStyles="true"
                bt:textColor="@color/gray_800" />

            <com.basistheory.android.view.TextElement
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edit_text"
                android:padding="5dp"
                bt:hint="Name"
                bt:removeDefaultStyles="true"
                bt:textColor="@color/gray_800" />

            <com.basistheory.android.view.TextElement
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edit_text"
                android:padding="5dp"
                bt:hint="Phone Number"
                bt:removeDefaultStyles="true"
                bt:textColor="@color/gray_800" />

            <com.basistheory.android.view.TextElement
                android:id="@+id/orderNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edit_text"
                android:padding="5dp"
                bt:hint="Order Number"
                bt:removeDefaultStyles="true"
                bt:textColor="@color/gray_800"
                bt:keyboardType="text"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/tokenizeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/primary"
                    android:onClick="submit"
                    android:text="Tokenize" />

                <Button
                    android:id="@+id/setTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/primary"
                    android:onClick="setText"
                    android:text="Set Text" />

            </LinearLayout>

            <TextView
                android:id="@+id/tokenizeResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="monospace" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>