...
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">


            <com.basistheory.android.view.TextElement
                android:id="@+id/socialSecurityNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edit_text"
                android:inputType="number"
                android:padding="5dp"
...
